fixed banner alignment

--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -34,3 +34,8 @@
     color: white;
     font-size: 8px;
 }
+
+#right-panel {
+    position: absolute;
+    right: 0;
+}
